2004-05-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* src/Makefile.in: Fix for parallel build: wait for subdir objects to
	be finished before creating the library.

2004-04-30  Richard B. Kreckel  <kreckel@ginac.de>

	* src/integer/output/cl_I_print.cc (print_integer): workaround
	GCC compiler bug (cf. Debian bug#246319).

2004-03-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* m4/gmp.m4 (CL_GMP_CHECK): Do not lose LIBS setting with config.cache
	enabled.

2004-03-08  Bruno Haible  <bruno@clisp.org>

	* src/float/lfloat/elem/cl_LF_mul.cc (operator*): Fix the second
	underflow condition.
	* src/float/lfloat/algebraic/cl_LF_sqrt.cc (sqrt): Fix a bug with large
	uexp whereby SQRT of MOST-POSITIVE-LONG-FLOAT was less than 1.

2004-03-04  Richard B. Kreckel  <kreckel@ginac.de>

	* Makefile.in (install): Add ${srcdir} for cln.m4.
	* m4/gmp.m4: quote macro names.
	Reported by Ralf Wildenhues <Ralf.Wildenhues@gmx.de>.

2004-01-01  Richard B. Kreckel  <kreckel@ginac.de>

	* Version 1.1.6 released.

2004-01-01  Richard B. Kreckel  <kreckel@ginac.de>

	* include/cln/univpoly.h, include/cln/univpoly_complex.h,
	  include/cln//univpoly_integer.h, include/cln/univpoly_modint.h,
	  include/cln/univpoly_rational.h, include/cln/univpoly_real.h,
	  src/polynomial/elem/cl_UP_GF2.h, src/polynomial/elem/cl_UP_MI.h,
	  src/polynomial/elem/cl_UP_gen.h, src/polynomial/elem/cl_UP_no_ring.cc,
	  src/polynomial/elem/cl_UP_number.h (ldegree): New function.
	* doc/cln.tex: Document `ldegree'.

2003-12-29  Richard B. Kreckel  <kreckel@ginac.de>

	Rework of autoconfiscation infrastructure
	* autoconf/config.{guess,sub}: Update to GNU version 2003-10-07.
	* autoconf/ltmain.sh: Update to GNU version 1.4.3.
	* autoconf/autoconf: Remove (from now on we assume autoconf is
	  installed properly on the sytem).
	* autoconf/autoconf.m4: Likewise.
	* autoconf/autoconf.m4f: Likewise.
	* autoconf/acgeneral.m4: Likewise.
	* autoconf/acspecific.m4: Likewise.
	* autoconf/aclocal.m4: Regenerate.