@@ -1,0 +1,29 @@
+.TH PI 1
+.SH NAME
+pi \- compute decimal Archimedes' constant Pi to arbitrary accuracy.
+.SH SYNOPSIS
+.B pi
+.I "[digits]"
+.br
+.SH "DESCRIPTION"
+The
+.BR pi 
+command prints 100 decimal digits of Archimedes' constant pi or
+a number of digits specified by an integer parameter on the command
+line.
+.TP
+.B \-\-help
+Show summary of options.
+.TP
+.B \-\-version
+Show version of program and exit.
+.TP
+.B \-\-bibliography
+Output recommended readings and exit.
+.SH "SEE ALSO"
+The CLN library is documented fully by
+.IR "cln" ,
+available via the Info system.
+.SH AUTHOR
+CLN was written by Bruno Haible <haible@gnu.org> and is 
+maintained by Richard Kreckel <kreckel@ginac.de>.
