@@ -1,3 +1,8 @@
+2004-05-02  Richard B. Kreckel  <kreckel@ginac.de>
+
+	* examples/pi.cc and examples/pi.1: New files.
+	* examples/Makefile.in: Build the pi executable.
+
 2004-05-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* src/Makefile.in: Fix for parallel build: wait for subdir objects to
